--- a/代码练习/note/1-前端面试整理(网络收集).md
+++ b/代码练习/note/1-前端面试整理(网络收集).md
@@ -68,37 +68,39 @@
 以下为三者之间的区别：
 
 <table>
-	<thead>
-		<tr>
-			<th>特性</th>
-			<th>Cookie</th>
-			<th>localStorage</th>
-			<th>sessionStorage</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>数据的生命期</td>
-			<td>一般由服务器生成，可设置失效时间。如果在浏览器端生成Cookie，默认是关闭浏览器后失效</td>
-			<td>除非被清除，否则永久保存</td>
-			<td>仅在当前会话下有效，关闭页面或浏览器后被清除</td>
-		</tr>
-		<tr>
-			<td>存放数据大小</td>
-			<td>4K左右</td>
-			<td colspan="2">一般为5MB</td>
-		</tr>
-		<tr>
-			<td>与服务器端通信</td>
-			<td>每次都会携带在HTTP头中，如果使用cookie保存过多数据会带来性能问题</td>
-			<td colspan="2">仅在客户端（即浏览器）中保存，不参与和服务器的通信</td>
-		</tr>
-		<tr>
-			<td>易用性</td>
-			<td>需要程序员自己封装，源生的Cookie接口不友好</td>
-			<td colspan="2">源生接口可以接受，亦可再次封装来对Object和Array有更好的支持</td>
-		</tr>
-	</tbody>
+```HTML
+<thead>
+	<tr>
+		<th>特性</th>
+		<th>Cookie</th>
+		<th>localStorage</th>
+		<th>sessionStorage</th>
+	</tr>
+</thead>
+<tbody>
+	<tr>
+		<td>数据的生命期</td>
+		<td>一般由服务器生成，可设置失效时间。如果在浏览器端生成Cookie，默认是关闭浏览器后失效</td>
+		<td>除非被清除，否则永久保存</td>
+		<td>仅在当前会话下有效，关闭页面或浏览器后被清除</td>
+	</tr>
+	<tr>
+		<td>存放数据大小</td>
+		<td>4K左右</td>
+		<td colspan="2">一般为5MB</td>
+	</tr>
+	<tr>
+		<td>与服务器端通信</td>
+		<td>每次都会携带在HTTP头中，如果使用cookie保存过多数据会带来性能问题</td>
+		<td colspan="2">仅在客户端（即浏览器）中保存，不参与和服务器的通信</td>
+	</tr>
+	<tr>
+		<td>易用性</td>
+		<td>需要程序员自己封装，源生的Cookie接口不友好</td>
+		<td colspan="2">源生接口可以接受，亦可再次封装来对Object和Array有更好的支持</td>
+	</tr>
+</tbody>
+```
 </table>
 
 #### 7. 什么是跨域请求？其限制原因有哪些？
@@ -120,7 +122,7 @@
 3. 重载页面时不需要重载整个页面，只需要重载页面中的一个框架页(减少了数据的传输，增加了网页下载速度)
 4. 能够原封不动的把嵌入的网页展现出来
 
--	缺点
+		缺点
 
 1. 会产生很多页面，不容易管理
 2. 不容易打印
