--- a/杂七杂八学习/点击事件重复请求.md
+++ b/杂七杂八学习/点击事件重复请求.md
@@ -33,20 +33,20 @@ $('ele').on('click',function(){
 
 ### 1. ajax提交
 
-<iframe width="100%" height="auto" src="//jsrun.net/rjZKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+<iframe width="100%" height="200px" src="//jsrun.net/ejZKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
 当用户短时间内重复点击登录按钮时,会触发多次的表单提交;
 解决方案: 当点击提交按钮后,给按钮添加disabled属性,事件完成后再`removeAttr('disabled')`
 
-<iframe width="100%" height="auto" src="//jsrun.net/RjZKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+<iframe width="100%" height="200px" src="//jsrun.net/tjZKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
 ### 2. 问卷答题
 
-<iframe width="100%" height="auto" src="//jsrun.net/ejZKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+<iframe width="100%" height="200px" src="//jsrun.net/RjZKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
 当选择一个答案时,重复点击,机会造成num重复增加,可能会造成中间某些选题未答直接跳到后面的答题，而添加一个name数组判断是否重复就可以避免该问题;
 
-<iframe width="100%" height="auto" src="//jsrun.net/tjZKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+<iframe width="100%" height="200px" src="//jsrun.net/rjZKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
 ## 总结
 
