1.视频截取第一帧 2.dataurl

--- a/项目总结/图片裁剪.md
+++ b/项目总结/图片裁剪.md
@@ -1,3 +1,4 @@
+-----
 title: 图片裁剪
 category: JavaScript
 date: 2018-08-08
@@ -16,3 +17,13 @@ tags: [JavaScript,crop]
 ### 实时预览裁剪框图片
 
 实时预览图片让我联想到很早以前仿写的商品放大镜功能
+
+<img src="../img/crop-01.jpg" width="500" hegiht="313" align=center />
+
+实现原理猜想:
+
+> 1. 设置一个原图的预览容器;
+> 2. 设置一个不同比例的实时预览容器;
+> 3. 对图片进行缩放,利用相对位移达到图片在预览容器中显示的效果;
+
+<img src="https://haohome.top/18-8-10/47850186.jpg" width="60%" align='center'/>
