--- a/项目总结/浏览器兼容性总结.md
+++ b/项目总结/浏览器兼容性总结.md
@@ -1,10 +1,12 @@
 -----
+
 title: 浏览器兼容性
 category: JavaScript
-date: 2018-08-21
+date: 2018-09-26
 tags: [JavaScript,兼容性]
 
-------
+-----
+
 
 ## 1. 视频截取第一帧
 
@@ -23,59 +25,62 @@ tags: [JavaScript,兼容性]
 > 6. 浏览器可以播放媒体数据时([oncanplay](http://www.webkkl.com/api-v/oncanplay.php))
 > 7. 当浏览器可以在不因缓冲而停顿的情况下播放时([oncanplaythrough](http://www.webkkl.com/api-v/oncanplaythrough.php))
 >
-> ```JavaScript
-> <body>
->   <h1>视频获取第一帧</h1>
->   <hr>
->   <div>
->     <p>本地上传</p>
->       <label for="file">选择视频</label> 
->       <input type="file" name="" id="file""><br>
->   </div>
->   <hr>
->   <div>
->       <p>外链</p>
->       <input type="text" id='link'><button id="btn">提交</button>
->   </div>
->   <hr>
->   <video id='video'  preload="meta" style='display:none' crossorigin="anonymous"></video>
->   <div>
->     <h2>首帧图片显示</h2>
->     <img src="" alt="" id="img">
->   </div>
-> 	<p>外链视频: https://haohome.top/movie.mp4</p>
->   <script>
->     var video = document.getElementById("video")
->     var file = document.getElementById("file")
->     var btn = document.getElementById("btn")
->     var link = document.getElementById("link")
->     file.addEventListener("change",function(){
->       var file  = this.files[0];
->       var src = URL.createObjectURL(file)
->       var newFile = new FileReader(file)
->       video.src = src
->     })
->     btn.onclick=function(){
->       video.src =link.value
->     }
->      video.addEventListener("loadeddata", function () {
->       var canvas = document.createElement("canvas");
->       canvas.width = this.videoWidth;
->       canvas.height = this.videoHeight;
->       setTimeout(() => {
->         canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
->         var imgSrc = '';
->         try {
->           imgSrc = canvas.toDataURL("image/png");
->           img.src = imgSrc
->         } catch (e) {
->           document.write("只能截取当前域名视频图片! ", e);
->         }
->       }, 200)
->     }, false);
->   </script>
-> </body>
-> ```
+
+<!-- more -->
+
+```javascript
+<body>
+  <h1>视频获取第一帧</h1>
+  <hr>
+  <div>
+    <p>本地上传</p>
+      <label for="file">选择视频</label> 
+      <input type="file" name="" id="file""><br>
+  </div>
+  <hr>
+  <div>
+      <p>外链</p>
+      <input type="text" id='link'><button id="btn">提交</button>
+  </div>
+  <hr>
+  <video id='video'  preload="meta" style='display:none' crossorigin="anonymous"></video>
+  <div>
+    <h2>首帧图片显示</h2>
+    <img src="" alt="" id="img">
+  </div>
+	<p>外链视频: https://haohome.top/movie.mp4</p>
+  <script>
+    var video = document.getElementById("video")
+    var file = document.getElementById("file")
+    var btn = document.getElementById("btn")
+    var link = document.getElementById("link")
+    file.addEventListener("change",function(){
+      var file  = this.files[0];
+      var src = URL.createObjectURL(file)
+      var newFile = new FileReader(file)
+      video.src = src
+    })
+    btn.onclick=function(){
+      video.src =link.value
+    }
+     video.addEventListener("loadeddata", function () {
+      var canvas = document.createElement("canvas");
+      canvas.width = this.videoWidth;
+      canvas.height = this.videoHeight;
+      setTimeout(() => {
+        canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
+        var imgSrc = '';
+        try {
+          imgSrc = canvas.toDataURL("image/png");
+          img.src = imgSrc
+        } catch (e) {
+          document.write("只能截取当前域名视频图片! ", e);
+        }
+      }, 200)
+    }, false);
+  </script>
+</body>
+```
 
 <iframe width="100%" height="300" src="//jsrun.net/PqhKp/embedded/all/light/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
@@ -87,17 +92,17 @@ tags: [JavaScript,兼容性]
 >
 > 1. `URL.createObjectURL`: 
 >
->    ```JavaScript
->    var src = URL.createObjectURL(file)
->    ```
+```JavaScript
+var src = URL.createObjectURL(file)
+```
 >
 > 2. **`FileReader`**:
 >
->    ```JavaScript
->    var fr=new FileReader();
->    fr.onload=function (file) {
->     var src =this.result;
->    }
->    ```
+```JavaScript
+var fr=new FileReader();
+fr.onload=function (file) {
+var src =this.result;
+}
+```
 >    当前监听video视频获取首帧图片时,采用了延时200ms,是为了给视频加载以一定时间
 >
