--- a/项目总结/图片上传与压缩.md
+++ b/项目总结/图片上传与压缩.md
@@ -40,7 +40,7 @@ file2.onchange = function () {
 
 ## 2. 图片的压缩
 
-当前手机拍照质量月来越高,带来的问题就是大小也越来越大,直接上传原图,上传速度会很低,甚至很可能上传失败,而且后续加载也影响速度
+当前手机拍照质量越来越高,带来的问题就是大小也越来越大,直接上传原图,上传速度会很低,甚至很可能上传失败,而且后续加载也影响速度
 
 下面是封装了一个压缩图片的方法,实现的原理是,利用canvas将图片绘制出来,并导出canvas图片.主要通过图片的缩放和控制canvas导出图片质量来实现图片的体积压缩
 
@@ -61,7 +61,7 @@ function compressImg(file, quality) {
           var ctx = canvas.getContext('2d')
           var canvasWidth = document.documentElement.clientWidth * window.devicePixelRatio
           var canvasHeight = document.documentElement.clientHeight * window.devicePixelRatio
-          // 水平方向想缩放比
+          // 水平方向缩放比
           var scaleX = canvasWidth / img.width
           var scaleY = canvasHeight / img.height
           // 取缩放比更小的比例
